fix(cloud-tasks): restore gRPC server trace spans
Register a global Micrometer observation interceptor so inbound gRPC
requests produce OpenTelemetry server spans. Add integration coverage for
the RPC service, method, status code, and server span kind attributes.

Fixes #547

Signed-off-by: Sanjay Saxena <sasaxena@nvidia.com>